set01/problem12_compile_errors.txt
Compilation started at 11/2/2023, 10:00:37 AM
Compilation finished at 11/2/2023, 10:00:38 AM
Compilation started at 11/2/2023, 10:01:03 AM
Compilation finished at 11/2/2023, 10:01:03 AM
Compilation started at 11/2/2023, 10:01:28 AM
c:\Users\thush\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-tfthushaar\set01\problem12.c: In function 'get_n':
c:\Users\thush\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-tfthushaar\set01\problem12.c:10:11: error: expected expression before ',' token
     scanf(, &n);
           ^
Compilation finished at 11/2/2023, 10:01:28 AM
Compilation started at 11/2/2023, 10:02:08 AM
Compilation finished at 11/2/2023, 10:02:08 AM
